# QGrover-QFT-T

./: .gitignore  CMakeLists.txt  QuantAlg  README.md  build.sh  build_main.bat  build_main.sh  build_test.bat  build_test.sh  check.c  check.h  draw_amps.py  errorlog.txt  functions.h  gates.c  gates.h  grover.c  grover.h  input.txt  log_file.txt  main  main.c  measure.c  measure.h  old_main.c  output.txt  qft.c  qft.h  sborka.release.bat  sborka_debug.bat  sborka_release.bat  state.c  state.h  tests.c  tests.h  types.h
f/: my_main
vector/: array_decl.h  array_def.h
